--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        
+        <img class="logo" src="./logo.jpg" alt="">
+        <img class="logo" src="./for3.png" alt="">
     </header>
 </body>
 </html>
